<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <LinearLayout android:layout_height="fill_parent" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:orientation="vertical">
        <TextView android:text="@string/confirm_taking_label" android:id="@+id/confirm_taking_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_margin="20dip"></TextView>
        <Button android:text="@string/confirm_taking_confirm_btn" android:id="@+id/confirm_taking_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_margin="20dip"></Button>
        <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:text="@string/confirm_taking_next_doze" android:id="@+id/confirm_taking_next_doze_label" android:layout_height="wrap_content" android:layout_margin="20dip"></TextView>
    </LinearLayout>
</LinearLayout>
